--- a/test1.html
+++ b/test1.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="test1.css" />
   </head>
   <body class="has-background-primary-light">
-    <!-- 서비스화면 -->
+    <!-- 서비스화면dd -->
     <div id="box">
       <div class="timer"></div>
       <div class="count is-size-6">
